services section added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <nav class="container mx-auto mt-4">
             <div class="navbar ">
                 <div class="navbar-start">
-                    <a ><img class="w-28" src="assest/logo-header.png" alt=""></a>
+                    <a><img class="w-28" src="assest/logo-header.png" alt=""></a>
                     <div class="dropdown ">
                         <div tabindex="0" role="button" class="btn btn-ghost lg:hidden ">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
@@ -47,7 +47,7 @@
                             <li><a>Contact us</a></li>
                         </ul>
                     </div>
-                    
+
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-1 text-[var(--text-color)]">
@@ -59,15 +59,45 @@
                 <div class="navbar-end gap-5 hidden lg:flex">
                     <img src="assest/search.png" alt="">
                     <img src="assest/shopping-cart.png" alt="">
-                    <a class="btn border-[var(--primary-color)] hover:bg-[var(--primary-color)] hover:text-white">Login</a>
+                    <a
+                        class="btn border-[var(--primary-color)] hover:bg-[var(--primary-color)] hover:text-white">Login</a>
                     <a class="btn bg-[var(--primary-color)] text-white hover:border-[var(--primary-color)] hover:text-[var(--primary-color)]
                     hover:bg-white">Register</a>
                 </div>
             </div>
+            <hr class="bg-[var(--primary-color)]  md:hidden h-1 ">
         </nav>
-
+        <div class="mt-10   px-5">
+            <div class="text-center text-[var(--text-color)] space-y-5">
+                <h1 class="text-3xl md:text-5xl font-semibold ">Freshness <span class="text-[var(--primary-color)]">You Can <br> Count</span> On, Prices You’ll Love!</h1>
+                <p class="md:w-[799px] mx-auto">Shop your daily essentials at unbeatable prices. From fresh produce to pantry staples, we’ve got you covered every day!</p>
+                <img class="w-1/2 mx-auto" src="assest/hero-vegetables.png" alt="">
+            </div>
+            
+        </div>
     </header>
     <main>
+        <!-- services section -->
+        <div class="p-10 md:p-32">
+            <h4 class="mb-10 text-[var(--primary-color)] text-4xl font-semibold">Services</h4>
+            <div class="md:flex gap-5 ">
+                <div class=" text-[var(--text-color)] text-center space-y-5 bg-[var(--bg-color)] p-7 rounded-2xl">
+                    <img class="mx-auto" src="assest/service.png" alt="">
+                    <h5 class="text-2xl font-semibold" >24/7 Services </h5>
+                    <p>Some companies offer 24/7 after-sales services, including hardware upgrades, spare parts, and preventive maintenance.</p>
+                </div>
+                <div class=" text-[var(--text-color)] text-center space-y-5 bg-[var(--bg-color)] p-7 rounded-2xl">
+                    <img class="mx-auto" src="assest/delivery.png" alt="">
+                    <h5 class="text-2xl font-semibold" >Fast Delivery </h5>
+                    <p>We pride ourselves on offering fast payment a dedicated customer service team, and ensuring the safe delivery of your parcels.</p>
+                </div>
+                <div class="text-[var(--text-color)] text-center space-y-5 bg-[var(--bg-color)] p-7 rounded-2xl">
+                    <img class="mx-auto" src="assest/healthy.png" alt="">
+                    <h5 class="text-2xl font-semibold" >Healthy Products  </h5>
+                    <p>Eating a wide variety of nutritious foods, including fruit, vegetables, nuts, seeds, and lean protein can help support your overall health.</p>
+                </div>
+            </div>
+        </div>
 
     </main>
     <footer>
