Popular Products section added

--- a/index.html
+++ b/index.html
@@ -69,11 +69,13 @@
         </nav>
         <div class="mt-10   px-5">
             <div class="text-center text-[var(--text-color)] space-y-5">
-                <h1 class="text-3xl md:text-5xl font-semibold ">Freshness <span class="text-[var(--primary-color)]">You Can <br> Count</span> On, Prices You’ll Love!</h1>
-                <p class="md:w-[799px] mx-auto">Shop your daily essentials at unbeatable prices. From fresh produce to pantry staples, we’ve got you covered every day!</p>
+                <h1 class="text-3xl md:text-5xl font-semibold ">Freshness <span class="text-[var(--primary-color)]">You
+                        Can <br> Count</span> On, Prices You’ll Love!</h1>
+                <p class="md:w-[799px] mx-auto">Shop your daily essentials at unbeatable prices. From fresh produce to
+                    pantry staples, we’ve got you covered every day!</p>
                 <img class="w-1/2 mx-auto" src="assest/hero-vegetables.png" alt="">
             </div>
-            
+
         </div>
     </header>
     <main>
@@ -83,18 +85,136 @@
             <div class="md:flex gap-5 ">
                 <div class=" text-[var(--text-color)] text-center space-y-5 bg-[var(--bg-color)] p-7 rounded-2xl">
                     <img class="mx-auto" src="assest/service.png" alt="">
-                    <h5 class="text-2xl font-semibold" >24/7 Services </h5>
-                    <p>Some companies offer 24/7 after-sales services, including hardware upgrades, spare parts, and preventive maintenance.</p>
+                    <h5 class="text-2xl font-semibold">24/7 Services </h5>
+                    <p>Some companies offer 24/7 after-sales services, including hardware upgrades, spare parts, and
+                        preventive maintenance.</p>
                 </div>
                 <div class=" text-[var(--text-color)] text-center space-y-5 bg-[var(--bg-color)] p-7 rounded-2xl">
                     <img class="mx-auto" src="assest/delivery.png" alt="">
-                    <h5 class="text-2xl font-semibold" >Fast Delivery </h5>
-                    <p>We pride ourselves on offering fast payment a dedicated customer service team, and ensuring the safe delivery of your parcels.</p>
+                    <h5 class="text-2xl font-semibold">Fast Delivery </h5>
+                    <p>We pride ourselves on offering fast payment a dedicated customer service team, and ensuring the
+                        safe delivery of your parcels.</p>
                 </div>
                 <div class="text-[var(--text-color)] text-center space-y-5 bg-[var(--bg-color)] p-7 rounded-2xl">
                     <img class="mx-auto" src="assest/healthy.png" alt="">
-                    <h5 class="text-2xl font-semibold" >Healthy Products  </h5>
-                    <p>Eating a wide variety of nutritious foods, including fruit, vegetables, nuts, seeds, and lean protein can help support your overall health.</p>
+                    <h5 class="text-2xl font-semibold">Healthy Products </h5>
+                    <p>Eating a wide variety of nutritious foods, including fruit, vegetables, nuts, seeds, and lean
+                        protein can help support your overall health.</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Popular Products section -->
+        <div class=" p-10 md:p-32 bg-[var(--bg-color)]">
+            <h4 class="mb-10 text-[var(--primary-color)] text-4xl font-semibold">Popular Products</h4>
+            <div class=" grid grid-cols-5 gap-5">
+
+                <div class=" row-span-3  col-span-2 space-y-2 bg-lime-400 rounded-2xl bg p-5">
+                    <h3 class="text-3xl text-white font-extrabold">30% off</h3>
+                    <p>Discover a world of treats, toys, <br> and essentials handpicked for </p>
+                    <button class="btn bg-white"> Buy Now</button>
+                    <div class=" ">
+                        <img class="w-36" src="assest/vegetable-offer.png" alt="">
+                    </div>
+                </div>
+                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                    <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
+                    <div class=" text-[var(--text-color)]">
+                        <div class="flex gap-2">
+                            <img class="" src="assest/fi_2107957.png" alt="">
+                            <h5 >4.5</h5>
+                        </div>
+                        <h3 class="text-xl font-medium">Onion 1 KG</h3>
+                        <p class="font-medium">$39.99</p>
+                    </div>
+                </div>
+                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                    <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
+                    <div class=" text-[var(--text-color)]">
+                        <div class="flex gap-2">
+                            <img class="" src="assest/fi_2107957.png" alt="">
+                            <h5 >4.5</h5>
+                        </div>
+                        <h3 class="text-xl font-medium">Onion 1 KG</h3>
+                        <p class="font-medium">$39.99</p>
+                    </div>
+                </div>
+                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                    <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
+                    <div class=" text-[var(--text-color)]">
+                        <div class="flex gap-2">
+                            <img class="" src="assest/fi_2107957.png" alt="">
+                            <h5 >4.5</h5>
+                        </div>
+                        <h3 class="text-xl font-medium">Onion 1 KG</h3>
+                        <p class="font-medium">$39.99</p>
+                    </div>
+                </div>
+                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                    <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
+                    <div class=" text-[var(--text-color)]">
+                        <div class="flex gap-2">
+                            <img class="" src="assest/fi_2107957.png" alt="">
+                            <h5 >4.5</h5>
+                        </div>
+                        <h3 class="text-xl font-medium">Onion 1 KG</h3>
+                        <p class="font-medium">$39.99</p>
+                    </div>
+                </div>
+                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                    <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
+                    <div class=" text-[var(--text-color)]">
+                        <div class="flex gap-2">
+                            <img class="" src="assest/fi_2107957.png" alt="">
+                            <h5 >4.5</h5>
+                        </div>
+                        <h3 class="text-xl font-medium">Onion 1 KG</h3>
+                        <p class="font-medium">$39.99</p>
+                    </div>
+                </div>
+                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                    <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
+                    <div class=" text-[var(--text-color)]">
+                        <div class="flex gap-2">
+                            <img class="" src="assest/fi_2107957.png" alt="">
+                            <h5 >4.5</h5>
+                        </div>
+                        <h3 class="text-xl font-medium">Onion 1 KG</h3>
+                        <p class="font-medium">$39.99</p>
+                    </div>
+                </div>
+                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                    <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
+                    <div class=" text-[var(--text-color)]">
+                        <div class="flex gap-2">
+                            <img class="" src="assest/fi_2107957.png" alt="">
+                            <h5 >4.5</h5>
+                        </div>
+                        <h3 class="text-xl font-medium">Onion 1 KG</h3>
+                        <p class="font-medium">$39.99</p>
+                    </div>
+                </div>
+                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                    <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
+                    <div class=" text-[var(--text-color)]">
+                        <div class="flex gap-2">
+                            <img class="" src="assest/fi_2107957.png" alt="">
+                            <h5 >4.5</h5>
+                        </div>
+                        <h3 class="text-xl font-medium">Onion 1 KG</h3>
+                        <p class="font-medium">$39.99</p>
+                    </div>
+                </div>
+                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                    <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
+                    <div class=" text-[var(--text-color)]">
+                        <div class="flex gap-2">
+                            <img class="" src="assest/fi_2107957.png" alt="">
+                            <h5 >4.5</h5>
+                        </div>
+                        <h3 class="text-xl font-medium">Onion 1 KG</h3>
+                        <p class="font-medium">$39.99</p>
+                    </div>
                 </div>
             </div>
         </div>
