Grocery News added

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 
         </div>
     </header>
-    <main>
+    <main class="relative pb-48">
         <!-- services section -->
-        <div class="p-10 md:p-32">
-            <h4 class="mb-10 text-[var(--primary-color)] text-4xl font-semibold">Services</h4>
+        <div class="p-4 py-10 md:p-32">
+            <h4 class="mb-10 text-[var(--primary-color)] text-2xl  md:text-4xl font-semibold">Services</h4>
             <div class="md:flex gap-5 ">
                 <div class=" text-[var(--text-color)] text-center space-y-5 bg-[var(--bg-color)] p-7 rounded-2xl">
                     <img class="mx-auto" src="assest/service.png" alt="">
@@ -105,112 +105,112 @@
         </div>
 
         <!-- Popular Products section -->
-        <div class=" p-10 md:p-32 bg-[var(--bg-color)]">
-            <h4 class="mb-10 text-[var(--primary-color)] text-4xl font-semibold">Popular Products</h4>
-            <div class=" grid grid-cols-5 gap-5">
+        <div class="py-10 p-4 md:p-32 bg-[var(--bg-color)]">
+            <h4 class="mb-10 text-[var(--primary-color)] text-2xl  md:text-4xl font-semibold">Popular Products</h4>
+            <div class=" grid  md:grid-cols-5 gap-5">
 
-                <div class=" row-span-3  col-span-2 space-y-2 bg-lime-400 rounded-2xl bg p-5">
-                    <h3 class="text-3xl text-white font-extrabold">30% off</h3>
-                    <p>Discover a world of treats, toys, <br> and essentials handpicked for </p>
+                <div class=" row-span-3  col-span-2 space-y-4 bg-lime-400 rounded-2xl  px-5">
+                    <h3 class="text-3xl pt-10 text-white font-extrabold">30% off</h3>
+                    <p>Discover a world of treats, toys, and essentials handpicked for </p>
                     <button class="btn bg-white"> Buy Now</button>
-                    <div class=" ">
-                        <img class="w-36" src="assest/vegetable-offer.png" alt="">
+                    <div class="flex justify-end ">
+                        <img class="w-" src="assest/vegetable-offer.png" alt="">
                     </div>
                 </div>
-                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
                             <img class="" src="assest/fi_2107957.png" alt="">
-                            <h5 >4.5</h5>
+                            <h5>4.5</h5>
                         </div>
                         <h3 class="text-xl font-medium">Onion 1 KG</h3>
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
-                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
                             <img class="" src="assest/fi_2107957.png" alt="">
-                            <h5 >4.5</h5>
+                            <h5>4.5</h5>
                         </div>
                         <h3 class="text-xl font-medium">Onion 1 KG</h3>
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
-                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
                             <img class="" src="assest/fi_2107957.png" alt="">
-                            <h5 >4.5</h5>
+                            <h5>4.5</h5>
                         </div>
                         <h3 class="text-xl font-medium">Onion 1 KG</h3>
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
-                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
                             <img class="" src="assest/fi_2107957.png" alt="">
-                            <h5 >4.5</h5>
+                            <h5>4.5</h5>
                         </div>
                         <h3 class="text-xl font-medium">Onion 1 KG</h3>
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
-                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
                             <img class="" src="assest/fi_2107957.png" alt="">
-                            <h5 >4.5</h5>
+                            <h5>4.5</h5>
                         </div>
                         <h3 class="text-xl font-medium">Onion 1 KG</h3>
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
-                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
                             <img class="" src="assest/fi_2107957.png" alt="">
-                            <h5 >4.5</h5>
+                            <h5>4.5</h5>
                         </div>
                         <h3 class="text-xl font-medium">Onion 1 KG</h3>
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
-                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
                             <img class="" src="assest/fi_2107957.png" alt="">
-                            <h5 >4.5</h5>
+                            <h5>4.5</h5>
                         </div>
                         <h3 class="text-xl font-medium">Onion 1 KG</h3>
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
-                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
                             <img class="" src="assest/fi_2107957.png" alt="">
-                            <h5 >4.5</h5>
+                            <h5>4.5</h5>
                         </div>
                         <h3 class="text-xl font-medium">Onion 1 KG</h3>
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
-                <div class= "flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
                             <img class="" src="assest/fi_2107957.png" alt="">
-                            <h5 >4.5</h5>
+                            <h5>4.5</h5>
                         </div>
                         <h3 class="text-xl font-medium">Onion 1 KG</h3>
                         <p class="font-medium">$39.99</p>
@@ -219,9 +219,95 @@
             </div>
         </div>
 
-    </main>
-    <footer>
+        <!-- Arrival & Offers section -->
+        <div class=" p-4  md:p-32">
+            <h4 class="mb-10 text-[var(--primary-color)] text-2xl  md:text-4xl font-semibold">Arrival & Offers</h4>
+            <div class="md:grid grid-cols-5  gap-5">
+                <div class="md:col-span-3 flex justify-between items-center bg-[#115414] rounded-2xl ">
+                    <div class=" p-5 space-y-5 ">
+                        <img src="assest/dawat-logo.png" alt="">
+                        <div class="pl-5 space-y-5">
+                            <button class="btn  bg-green-400 text-white font-extrabold">Cook Exotic Dishes</button>
+                            <h3 class="text-xl text-white">UP to <span class="font-bold">20% OFF</span></h3>
+                        </div>
+                    </div>
+                    <div class="pt-10">
+                        <img src="assest/dawat-mock-up.png" alt="">
+                    </div>
+                </div>
+                <div class="md:col-span-2 flex justify-between items-center bg-[#102861] rounded-2xl p-2">
+                    <div class="p-5 space-y-5 ">
+                        <img src="assest/india-gate-logo.png" alt="">
+                        <button class="btn  bg-blue-400 text-white font-extrabold">World’s No.1 Rice</button>
+                        <h3 class="text-xl text-white">UP to <span class="font-bold">40% OFF</span></h3>
+                    </div>
+                    <div class="pt-10">
+                        <img src="assest/india-gate-mock-up.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
 
+        <!-- Get Grocery News section -->
+        <div class="absolute  -bottom-72 flex justify-between items-center m-4 md:m-32 bg-[var(--bg-color)]">
+            <div>
+                <img src="assest/vegetable-busket.png" alt="">
+            </div>
+            <div>
+                <h3>Get Grocery News!</h3>
+                <p>Exclusive training tips, ticks, product deals and more.</p>
+                <div>
+                    <input placeholder="Enter email...." type="text">
+                </div>
+                <button class="btn bg-[var(--primary-color)] text-white hover:border-[var(--primary-color)] hover:text-[var(--primary-color)]
+                hover:bg-white">Subscribe</button>
+            </div>
+        </div>
+
+
+
+    </main>
+    <footer class=" footer pt-72 bg-[var(--primary-color)] text-base-content p-10">
+        <nav>
+            <img src="assest/logo-footer.png" alt="">
+            <p class="text-white">Discover a world of treats, toys,<br> and essentials handpicked for your furry friends
+                .</p>
+        </nav>
+        <nav class="text-white">
+
+            <a class="link link-hover">Product</a>
+            <a class="link link-hover">Services</a>
+            <a class="link link-hover">Contact us</a>
+        </nav>
+        <nav class="text-white">
+            <h6 class="footer-title">Follow Us</h6>
+            <div class="grid grid-flow-col gap-4">
+                <a>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                        class="fill-current">
+                        <path
+                            d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z">
+                        </path>
+                    </svg>
+                </a>
+                <a>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                        class="fill-current">
+                        <path
+                            d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z">
+                        </path>
+                    </svg>
+                </a>
+                <a>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                        class="fill-current">
+                        <path
+                            d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z">
+                        </path>
+                    </svg>
+                </a>
+            </div>
+        </nav>
     </footer>
 
 </body>
